--- a/styles/style.css
+++ b/styles/style.css
@@ -206,9 +206,32 @@ footer {
     width: 80%;
     margin: 0 auto;
 }
-/* @media screen and (max-width: 500px) {
-    .banner-text {
-        width: 100%;
+@media screen and (max-width: 576px) {
+    nav, ul, .stat, .sponsor-name {
+        flex-direction: column;
     }
     
-} */
+    .banner-text {
+        padding: 0;
+    }
+    .quick-list {
+        flex-direction: column-reverse;
+    }
+    .list-images {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 24px;
+    }
+    .features {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-content: space-between;
+        width: 80%;
+        margin: 40px auto;
+       
+    }
+    .sponsor-name img {
+        width: 50%;
+        margin: 10px auto;
+    }
+} 
