--- a/styles/style.css
+++ b/styles/style.css
@@ -190,6 +190,8 @@ ul li a {
 
 .sponsors {
     text-align: center;
+    width: 80%;
+    margin: 0 auto;
 }
 
 .sponsor-name {
@@ -213,6 +215,10 @@ footer {
     
     .banner-text {
         padding: 0;
+    }
+    .banner img {
+        width: 100%;
+        height: 100%;
     }
     .quick-list {
         flex-direction: column-reverse;
