--- a/styles/style.css
+++ b/styles/style.css
@@ -167,8 +167,13 @@ ul li a {
     border: 1px solid #FF900E;
     border-radius: 8px;
     padding: 35px 45px;
+    transition: transform 0.5s;
 }
 
+.stat>div:hover {
+    transform: scale(1.2);
+    border-color: red;
+}
 .stat-title {
     font-weight: 600;
     font-size: 45px;
@@ -226,7 +231,8 @@ footer {
     .list-images {
         display: grid;
         grid-template-columns: repeat(1,1fr);
-        gap: 24px;
+        gap: 50px;
+        margin: 50px;
     }
     .features {
         display: grid;
