--- a/styles/style.css
+++ b/styles/style.css
@@ -98,13 +98,14 @@ ul li a {
 }
 
 .section-title {
-    font-weight: 500;
+    font-weight: 700;
     font-size: 45px;
     margin-bottom: 24px;
 }
 .section-description {
     font-weight: 400;
     font-size: 16px;
+    color: #727272;
 }
 .list-images {
     display: grid;
