--- a/styles/style.css
+++ b/styles/style.css
@@ -220,9 +220,11 @@ ul li a {
 }
 .countries {
     display: flex;
-    justify-content: space-between;
-    margin: 50px auto;
+    justify-content: space-evenly;
+    margin: 50px 0px;
+    text-align: center;
 }
+
 .fa-location-dot {
     color: green;
 }
@@ -251,7 +253,7 @@ footer {
     margin: 0 auto;
 }
 @media screen and (max-width: 576px) {
-    nav, ul, .stat, .sponsor-name {
+    nav, ul, .stat, .sponsor-name, .countries {
         flex-direction: column;
     }
     
